Lista 1/recursion.h

#ifndef __RECURSION_H__
#define __RECURSION_H__
int factorial(int n);
int greatest_common_divisor(int a, int b);
int diophantine_equation_solver(int a, int b, int c);
int extended_euclidean_algorithm(int a, int b, int x, int y);
#endif